--- a/scripts/FiringRange/Gemfile
+++ b/scripts/FiringRange/Gemfile
@@ -2,4 +2,6 @@ source 'https://rubygems.org' do
   gem 'colored'
   gem 'fiedl-log'
   gem 'descriptive_statistics'
+  gem 'pawgen'
+  gem 'activesupport'
 end
